Added support for array variables. Added When Repeat, Then Repeat