@@ -8,6 +8,7 @@ import synfron.reshaper.burp.core.events.PropertyChangedArgs;
 import synfron.reshaper.burp.core.messages.HttpDataDirection;
 import synfron.reshaper.burp.core.rules.thens.ThenBuildHttpMessage;
 import synfron.reshaper.burp.core.rules.thens.entities.buildhttpmessage.MessageValueSetter;
+import synfron.reshaper.burp.core.vars.SetListItemPlacement;
 import synfron.reshaper.burp.core.vars.VariableSource;
 import synfron.reshaper.burp.core.vars.VariableSourceEntry;
 import synfron.reshaper.burp.core.vars.VariableString;
@@ -30,6 +31,12 @@ public class ThenBuildHttpMessageModel extends ThenModel<ThenBuildHttpMessageMod
     private VariableSource destinationVariableSource;
     @Getter
     private String destinationVariableName;
+    @Getter
+    private SetListItemPlacement itemPlacement;
+    @Getter
+    private String delimiter = "{{s:n}}";
+    @Getter
+    private String index;
 
     private final IEventListener<PropertyChangedArgs> messageValueSetterChangedListener = this::onMessageValueSetterChanged;
 
@@ -42,6 +49,9 @@ public class ThenBuildHttpMessageModel extends ThenModel<ThenBuildHttpMessageMod
                 .collect(Collectors.toList());
         this.destinationVariableSource = then.getDestinationVariableSource();
         this.destinationVariableName = VariableString.toString(then.getDestinationVariableName(), destinationVariableName);
+        itemPlacement = then.getItemPlacement();
+        delimiter = VariableString.toString(then.getDelimiter(), delimiter);
+        index = VariableString.toString(then.getIndex(), index);
         VariableCreatorRegistry.register(this);
     }
 
@@ -84,12 +94,34 @@ public class ThenBuildHttpMessageModel extends ThenModel<ThenBuildHttpMessageMod
         propertyChanged("destinationVariableName", destinationVariableName);
     }
 
+    public void setItemPlacement(SetListItemPlacement itemPlacement) {
+        this.itemPlacement = itemPlacement;
+        propertyChanged("itemPlacement", itemPlacement);
+    }
+
+    public void setDelimiter(String delimiter) {
+        this.delimiter = delimiter;
+        propertyChanged("delimiter", delimiter);
+    }
+
+    public void setIndex(String index) {
+        this.index = index;
+        propertyChanged("index", index);
+    }
+
     public List<String> validate() {
         List<String> errors = super.validate();
         if (StringUtils.isEmpty(destinationVariableName)) {
             errors.add("Destination Variable Name is required");
         } else if (!VariableString.isValidVariableName(destinationVariableName)) {
             errors.add("Destination Variable Name is invalid");
+        }
+        if (destinationVariableSource.isList() && itemPlacement.isHasIndexSetter()) {
+            if (StringUtils.isEmpty(index)) {
+                errors.add("Index is required");
+            } else if (!VariableString.isPotentialInt(index)) {
+                errors.add("Index must be an integer");
+            }
         }
         messageValueSetters.forEach(messageValueSetter -> errors.addAll(messageValueSetter.validate()));
         return errors;
@@ -105,12 +137,14 @@ public class ThenBuildHttpMessageModel extends ThenModel<ThenBuildHttpMessageMod
         messageValueSetters.forEach(MessageValueSetterModel::persist);
         ruleOperation.getMessageValueSetters().clear();
         ruleOperation.getMessageValueSetters().addAll(messageValueSetters.stream()
-                .map(MessageValueSetterModel::getMessageValueSetter)
-                .collect(Collectors.toList())
+                .map(MessageValueSetterModel::getMessageValueSetter).toList()
         );
 
         ruleOperation.setDestinationVariableSource(destinationVariableSource);
         ruleOperation.setDestinationVariableName(VariableString.getAsVariableString(destinationVariableName));
+        ruleOperation.setItemPlacement(itemPlacement);
+        ruleOperation.setDelimiter(VariableString.getAsVariableString(delimiter));
+        ruleOperation.setIndex(VariableString.getAsVariableString(index));
         setValidated(true);
         return true;
     }
